# mpJDQMR

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  ex_mpJDQMR  ex_mpJDQMR.cpp
include/: jd.h  matrix.h  mpjd.h
src/: CMakeLists.txt
src/blasWrappers/: blasWrappers.cpp  blasWrappers.h
src/include/: blasWrappers.h  helper.h  mpjd.h  mpjd_error.h  mpjd_stats.h
src/jd/: eigen_solver.tcc  jd.h  jd.tcc
src/matrix/: CMakeLists.txt  ScaledMatrixMatvecs.tcc  matrix.h  matrix.tcc  matrix_matvecs.tcc  smatrix.h
src/orth/: orthProc.h  orthProc.tcc
src/solver/: blockSqmr.tcc  sqmr.h  sqmr.tcc
src/subspace/: subspace.h  subspace.tcc
test/: CMakeLists.txt  ex_mpJDQMR  ex_mpJDQMR.cpp
